fixed home page gallery clipping on mobile

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -11,7 +11,7 @@
 {
     /* max-height: 100vh; */
     /* max-width: 1000px; */
-    min-width: 400px;
+    min-width: 350px;
 
     flex: 1;
 
